Last minute adjustments

--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,UKenglish,cleveref,autoref]{lipics-v2021}
+\documentclass[a4paper,UKenglish,cleveref,autoref,table]{lipics-v2021}
 \pdfoutput=1
 \bibliographystyle{plainurl}
 
@@ -18,7 +18,7 @@
 
 \keywords{First-order model counting, knowledge compilation, lifted inference}
 
-\relatedversion{}
+\relatedversiondetails[cite=DBLP:journals/corr/abs-2502-12278]{Full Version}{https://doi.org/10.48550/arXiv.2502.12278}
 
 \supplementdetails[subcategory={Source Code}]{Software}{https://doi.org/10.5281/zenodo.15583934}
 
@@ -51,7 +51,6 @@
 \usepackage{tikz}
 \usepackage{mathtools}
 \usepackage{booktabs}
-\usepackage[table]{xcolor}
 \usepackage{pifont}
 
 \usetikzlibrary{arrows.meta}
