Start drafting the talk

--- a/doc/camera_ready/paper.tex
+++ b/doc/camera_ready/paper.tex
@@ -18,7 +18,7 @@
 
 \keywords{First-order model counting, knowledge compilation, lifted inference}
 
-%\relatedversiondetails[cite=DBLP:journals/corr/abs-2502-12278]{Full Version}{https://doi.org/10.48550/arXiv.2502.12278}
+\relatedversiondetails[cite=DBLP:journals/corr/abs-2502-12278]{Full Version}{https://doi.org/10.48550/arXiv.2502.12278}
 
 \supplementdetails[subcategory={Source Code}]{Software}{https://doi.org/10.5281/zenodo.15583934}
 
@@ -33,7 +33,18 @@
   valuable comments and suggestions.}
 
 \nolinenumbers
-\hideLIPIcs
+
+\EventEditors{Jeremias Berg and Jakob Nordstr\"{o}m}
+\EventNoEds{2}
+\EventLongTitle{28th International Conference on Theory and Applications of Satisfiability Testing (SAT 2025)}
+\EventShortTitle{SAT 2025}
+\EventAcronym{SAT}
+\EventYear{2025}
+\EventDate{August 12--15, 2025}
+\EventLocation{Glasgow, Scotland}
+\EventLogo{}
+\SeriesVolume{341}
+\ArticleNo{6}
 
 \usepackage[linesnumbered,ruled,vlined]{algorithm2e}
 \usepackage{siunitx}
